--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+.--box{
+    width: 86%;
+    background-color: rgba(0, 0, 0, 0.822) ;
+    text-align: center;
+    margin:2rem auto ;
+    padding-bottom: 1.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.-box{
+    text-align: start;
+    margin-left: 1rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.-box h1{
+    margin-left: 3rem;
+    font-weight: 700;
+    margin-bottom: 3rem;
+    font-family: "Poppins", sans-serif
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.-box .section{
+    margin-top: 1rem;
+    color: #18d26f70;
 }
