--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -8,7 +8,7 @@
     text-decoration: none;
 }
 .contaner h1{
-    font-size: 300%;
+    font-size: 5.7vw;
     font-weight: 800;
 }
 .cotainer-box {
@@ -33,7 +33,7 @@
     top: 30vh;
 }
 .home .container-fluid{
-    margin-left: 6rem ;
+    margin-left: 9% ;
     display: block;
 }
 .container-fluid{
