--- a/src/pages/about/skills/skills.css
+++ b/src/pages/about/skills/skills.css
@@ -1,6 +1,6 @@
 .skills {
     text-align: center;
-    margin-top: auto;
+    margin: auto;
     width: 98%;
     display: flex;
     flex-wrap: wrap;
